# polars-flight

./: Cargo.toml
src/: data_frame_iterator.rs  data_frame_reader.rs  data_frame_stream.rs  lib.rs
